# AESP

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
schemas/: code.json
src/: lib.rs  main.rs
src/compiler/: mod.rs
src/config/: defaults.rs  mod.rs
src/constraints/: mod.rs
src/decisions/: mod.rs
src/events/: mod.rs
src/graph/: annotation.rs  entity.rs  mod.rs  query.rs  relationship.rs  traversal.rs
src/indexer/: mod.rs
src/mcp/: mod.rs  protocol.rs  tools.rs
src/mcp/handlers/: mod.rs
src/normalizer/: mod.rs
src/parser/: mod.rs  treesitter.rs
src/parser/languages/: mod.rs
src/schema/: mod.rs  types.rs  validator.rs
src/storage/: migrations.rs  mod.rs  queries.rs
src/verification/: mod.rs
src/watcher/: mod.rs
tests/fixtures/sample_ts_project/src/api/: routes.ts
tests/fixtures/sample_ts_project/src/auth/: index.ts
tests/fixtures/sample_ts_project/src/db/: users.ts
